# ERI-Contract

./: .gitignore  Cargo.toml  LICENSE  foundry.toml  hardhat.config.js  package-lock.json  package.json  remappings.txt
.wake/extension/: local-local-chain-c8906606-f8f0-4525-af0c-07d2ed045671.json
cache/: solidity-files-cache.json
contracts/: Authenticity.sol  ERI_ENS.sol  EriErrors.sol  IEri.sol  Originality.sol  OriginalityFactory.sol  Ownership.sol  OwnershipLib.sol
eri-frontend/: next.config.mjs  package-lock.json  package.json  setup-env.js  setup-env.ts  tailwind.config.js
eri-frontend/src/app/: globals.css  layout.tsx  page.js  page.tsx
eri-frontend/src/components/: Authenticity.tsx  Ownership.tsx  navbar.tsx
eri-frontend/src/config/: index.tsx
eri-frontend/src/context/: AppkitProvider.tsx
eri-frontend/src/lib/: constants.tsx
eri-frontend/src/types/: global.d.ts  (+1 more)
ignition/modules/: Authenticity.js  Lock.js  Ownership.js  OwnershipLib.js
script/: Counter.s.sol  deploy.js
src/: controller.rs  main.rs  qr_code.rs  server.rs  utility.rs
src/config/: app_router.rs  app_state.rs  mod.rs  server.rs  swagger_config.rs
src/models/: certificate_model.rs  events.rs  mod.rs  router_path.rs
src/services/: app_router.rs  app_state.rs  certificate_service.rs  create_eip712.rs  mod.rs  other_tests.rs  qr_code.rs  verify_authenticity.rs
test/: Authenticity.t.sol  ChangeOfOwnership.t.sol  ClaimOwnership.t.sol  Counter.t.sol  CreateItem.t.sol  CreateItemInOwnership.t.sol  Items.t.sol  Ownership.t.sol  RegisterInOwnership.t.sol  UserRegistration.t.sol
(+34 files in other folders)
