[package]
name = "ERI-Contract"
version = "0.1.0"
edition = "2024"


[dependencies]
ethers = { version = "2.0.14", features = ["rustls"]}
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0.98" # Optional, for .env management
serde_json = "1.0"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }

#AXUM
axum = "0.8.3"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
ethabi = "18.0.0"
tower-http = { version = "0.6.2", features = ["cors"] } # Optional: for CORS
qrcode = "0.14.1"
validator = { version = "0.20.0", features = ["derive"] }
